RWD workshop done, and after feedback.

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <div class="hero__button">
             <a href="" class="btn  btn--hero">Open your shop</a>
         </div>
-        <img src="scss/assets/bwink_ppl_08_single_09.jpg" alt="" class="hero__background"/>
+        <img src="assets/bwink_ppl_08_single_09.jpg" alt="" class="hero__background"/>
     </div>
 </section>
 
@@ -59,7 +59,7 @@
                 <div class="icon">
                     <div class="article__circle circle--violet"></div>
                     <a href="/" class="article__link">
-                        <img class="icon__img" src="scss/assets/Person.svg" alt="person icon">
+                        <img class="icon__img" src="assets/Person.svg" alt="person icon">
                     </a>
                 </div>
                 <h3 class="title  article__title">
@@ -73,7 +73,7 @@
                 <div class="icon">
                     <div class="article__circle  circle--blue"></div>
                     <a href="/" class="article__link">
-                        <img class="icon__img" src="scss/assets/eye.svg" alt="eye icon">
+                        <img class="icon__img" src="assets/eye.svg" alt="eye icon">
                     </a>
                 </div>
                 <h3 class="title  article__title">
@@ -87,7 +87,7 @@
                 <div class="icon">
                     <div class="article__circle  circle--green"></div>
                     <a href="/" class="article__link">
-                        <img class="icon__img" src="scss/assets/catalog.svg" alt="catalog icon">
+                        <img class="icon__img" src="assets/catalog.svg" alt="catalog icon">
                     </a>
                 </div>
                 <h3 class="title  article__title">
@@ -116,7 +116,7 @@
                     minus illo cupiditate ab quod?</p>
             </div>
             <div class="info__image">
-                <img src="scss/assets/Macbook.png" alt="macbook"/>
+                <img src="assets/Macbook.png" alt="macbook"/>
             </div>
         </div>
 
@@ -130,7 +130,7 @@
                     minus illo cupiditate ab quod?</p>
             </div>
             <div class="info__image">
-                <img src="scss/assets/iPhone.png" alt="iphone"/>
+                <img src="assets/iPhone.png" alt="iphone"/>
             </div>
         </div>
 
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="info__rows--part2">
-                <img src="scss/assets/Trumpet.png" alt="Trumpet"/>
+                <img src="assets/Trumpet.png" alt="Trumpet"/>
             </div>
         </div>
 
@@ -282,10 +282,10 @@
         </div>
         <div class="footer__box__media">
             <a href="/" class="footer__media">
-                <img src="scss/assets/twitter.png" alt="Twitter logo">
+                <img src="assets/twitter.png" alt="Twitter logo">
             </a>
             <a href="/" class="footer__media">
-                <img src="scss/assets/facebook.png" alt="Facebook logo">
+                <img src="assets/facebook.png" alt="Facebook logo">
             </a>
         </div>
     </div>
