RWD workshop done, and after feedback.

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
         <a href="/" class="logo  header__logo">BestShop</a>
         <nav class="header__menu">
             <ul class="nav__menu">
-                <li class="menu__list"><a class="menu__link" href="/">Why us</a></li>
-                <li class="menu__list"><a class="menu__link" href="/">Benefits</a></li>
-                <li class="menu__list"><a class="menu__link" href="/">Prices</a></li>
-                <li class="menu__list"><a class="menu__link" href="/">Contact</a></li>
+                <li class="menu__list"><a class="menu__link" href="#why-us">Why us</a></li>
+                <li class="menu__list"><a class="menu__link" href="#benefits">Benefits</a></li>
+                <li class="menu__list"><a class="menu__link" href="#prices">Prices</a></li>
+                <li class="menu__list"><a class="menu__link" href="#contact">Contact</a></li>
             </ul>
         </nav>
         <button class="burger__menu">
@@ -32,7 +32,7 @@
     </div>
 </header>
 
-<section class="hero">
+<section class="hero" >
     <div class="hero__inside">
         <h1 class="title  hero__title">
             Start your better future!
@@ -48,7 +48,7 @@
 </section>
 
 
-<section class="section  section__platform">
+<section class="section  section__platform" id="why-us">
     <div class="container platform__container">
         <h2 class="title  section__title">
             The most popular sales platform in country
@@ -102,7 +102,7 @@
 </section>
 
 
-<section class="section  section__info">
+<section class="section  section__info" id="benefits">
     <div class="info__container container">
 
 
@@ -154,7 +154,7 @@
 </section>
 
 
-<section class="section  section__pricing">
+<section class="section  section__pricing" id="prices">
     <div class="container  pricing__container">
 
 
