--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Unbounded:wght@200..900&display=swap"
           rel="stylesheet">
     <script src="https://kit.fontawesome.com/f6b5c78ff2.js" crossorigin="anonymous"></script>
-    <script src="js/script.js" type="module"></script>
 </head>
 
 
@@ -362,6 +361,6 @@
         </div>
     </div>
 </footer>
-
+<script src="js/app.js" type="module"></script>
 </body>
 </html>
