--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>BestShop</title>
+		<title>Store</title>
 		<link rel="stylesheet" href="scss/generic/_reset.scss" />
 		<link rel="stylesheet" href="scss/main.scss" />
 		<link
@@ -18,7 +18,7 @@
 	<body>
 		<header class="header">
 			<div class="header__container">
-				<a href="/" class="logo header__logo">OpenShop</a>
+				<a href="/" class="logo header__logo">STORE®</a>
 				<nav class="header__menu">
 					<ul class="nav__menu">
 						<li class="menu__list">
@@ -28,7 +28,7 @@
 							<a class="menu__link" href="#benefits">Benefits</a>
 						</li>
 						<li class="menu__list">
-							<a class="menu__link" href="#prices">Prices</a>
+							<a class="menu__link" href="#prices">Price</a>
 						</li>
 						<li class="menu__list">
 							<a class="menu__link" href="#contact">Contact</a>
@@ -46,18 +46,16 @@
 
 		<section class="hero">
 			<div class="hero__inside">
-				<h1 class="title hero__title">Start your better future!</h1>
+				<h1 class="title hero__title">
+					The Future of Online Selling Starts Here
+				</h1>
 				<p class="text hero__text">
-					Open shop on our platform and increase your sales
+					Launch your online store in minutes and start selling today!
 				</p>
 
-				<img
-					src="assets/bwink_ppl_08_single_09.jpg"
-					alt=""
-					class="hero__background"
-				/>
+				<img src="assets/logo.png" alt="" class="hero__background" />
 				<div class="hero__button">
-					<a href="" class="btn btn--hero">Open your shop</a>
+					<a href="" class="btn btn--hero">Start Selling</a>
 				</div>
 			</div>
 		</section>
@@ -65,7 +63,7 @@
 		<section class="section section__platform" id="why-us">
 			<div class="platform__container">
 				<h2 class="title section__title">
-					The most popular sales platform in country
+					Join Thousands of Successful Online Sellers
 				</h2>
 
 				<div class="platform__list">
@@ -81,7 +79,7 @@
 							</a>
 						</div>
 						<h3 class="title article__title">100000+</h3>
-						<p class="text article__text">daily entries</p>
+						<p class="text article__text">Stores Launched</p>
 					</article>
 					<article class="platform__article">
 						<div class="icon">
@@ -91,10 +89,7 @@
 							</a>
 						</div>
 						<h3 class="title article__title">200000+</h3>
-						<p class="text article__text">
-							seen products <br />
-							every day
-						</p>
+						<p class="text article__text">Happy Customers</p>
 					</article>
 					<article class="platform__article">
 						<div class="icon">
@@ -108,10 +103,7 @@
 							</a>
 						</div>
 						<h3 class="title article__title">10000+</h3>
-						<p class="text article__text">
-							added posts <br />
-							daily
-						</p>
+						<p class="text article__text">in Sales Generated</p>
 					</article>
 				</div>
 			</div>
@@ -121,10 +113,10 @@
 			<div class="info__container">
 				<div class="info__rows info__rows--macbook">
 					<div class="info__text">
-						<h3 class="title info__title">Be always first</h3>
+						<h3 class="title info__title">Sell Anything, Anywhere</h3>
 						<p class="text info__description">
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
-							eveniet minus illo cupiditate ab quod?
+							Physical products, digital downloads, or services – we've got you
+							covered.
 						</p>
 					</div>
 					<div class="info__image">
@@ -134,10 +126,10 @@
 
 				<div class="info__rows info__rows--phone">
 					<div class="info__text">
-						<h3 class="title info__title">Be always first</h3>
+						<h3 class="title info__title">Powerful Tools for Growth</h3>
 						<p class="text info__description">
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
-							eveniet minus illo cupiditate ab quod?
+							Advanced analytics, SEO optimization, and marketing tools to boost
+							sales.
 						</p>
 					</div>
 					<div class="info__image">
@@ -148,13 +140,10 @@
 				<div class="info__double">
 					<div class="info__rows--part1">
 						<div class="info__text">
-							<h3 class="title info__title">
-								Increase recognition <br />
-								your brand!
-							</h3>
+							<h3 class="title info__title">Reach a Global Audience <br /></h3>
 							<p class="text info__description">
-								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste
-								eveniet minus illo cupiditate ab quod?
+								Sell across multiple platforms, including social media and
+								marketplaces. Fast, secure transactions 24/7.
 							</p>
 						</div>
 					</div>
@@ -242,7 +231,7 @@
 							id="products"
 							min="1"
 							step="1"
-							placeholder="Products quantity"
+							placeholder="Products Quantity"
 						/>
 					</div>
 					<div class="calc__inputs">
@@ -252,11 +241,11 @@
 							id="orders"
 							min="1"
 							step="1"
-							placeholder="Estimated orders in month"
+							placeholder="Estimated Monthly Sales"
 						/>
 					</div>
 					<div class="calc__select" id="package" data-value="">
-						<div class="select__input">Choose package</div>
+						<div class="select__input">Business Type</div>
 
 						<ul class="select__dropdown">
 							<li data-value="basic">Basic</li>
@@ -267,12 +256,12 @@
 					<label class="form__checkbox">
 						<input type="checkbox" id="accounting" />
 						<span class="checkbox"></span>
-						<p class="consent__text">Accounting</p>
+						<p class="consent__text">Payment Gateway Integration</p>
 					</label>
 					<label class="form__checkbox">
 						<input type="checkbox" id="terminal" />
 						<span class="checkbox"></span>
-						<p class="consent__text">Rental of a payment terminal</p>
+						<p class="consent__text">Custom Domain</p>
 					</label>
 				</form>
 
@@ -284,21 +273,21 @@
 							<span class="item__price">$price</span>
 						</li>
 						<li class="list__item" data-id="orders">
-							<span class="item__type">Orders</span>
+							<span class="item__type">Monthly Sales</span>
 							<span class="item__calc">num*order</span>
 							<span class="item__price">$price</span>
 						</li>
 						<li class="list__item" data-id="package">
-							<span class="item__type">Package</span>
+							<span class="item__type">Plan</span>
 							<span class="item__calc">type</span>
 							<span class="item__price">$price</span>
 						</li>
 						<li class="list__item" data-id="accounting">
-							<span class="item__type">Accounting</span>
-							<span class="item__price">$25</span>
+							<span class="item__type">Payment Gateway Integration</span>
+							<span class="item__price">$15</span>
 						</li>
 						<li class="list__item" data-id="terminal">
-							<span class="item__type">Terminal</span>
+							<span class="item__type">Custom Domain</span>
 							<span class="item__price">$5</span>
 						</li>
 					</ul>
@@ -372,9 +361,9 @@
 		<footer class="footer">
 			<div class="footer__container container">
 				<div class="footer__info">
-					<a href="/" class="logo footer__logo"> OpenShop </a>
+					<a href="/" class="logo footer__logo"> STORE®</a>
 					<span class="text footer__text"
-						>©2019 OpenShop LTD, All Rights Reserved</span
+						>©2019 STORE LTD, All Rights Reserved</span
 					>
 				</div>
 				<div class="footer__box__media">
