--- a/src/index.html
+++ b/src/index.html
@@ -253,16 +253,18 @@
 							<li data-value="premium">Premium</li>
 						</ul>
 					</div>
-					<label class="form__checkbox">
-						<input type="checkbox" id="accounting" />
-						<span class="checkbox"></span>
-						<p class="consent__text">Payment Gateway Integration</p>
-					</label>
-					<label class="form__checkbox">
-						<input type="checkbox" id="terminal" />
-						<span class="checkbox"></span>
-						<p class="consent__text">Custom Domain</p>
-					</label>
+					<div class="checkbox_box">
+						<label class="form__checkbox">
+							<input type="checkbox" id="accounting" />
+							<span class="checkbox"></span>
+							<p class="consent__text">Payment Gateway Integration</p>
+						</label>
+						<label class="form__checkbox">
+							<input type="checkbox" id="terminal" />
+							<span class="checkbox"></span>
+							<p class="consent__text">Custom Domain</p>
+						</label>
+					</div>
 				</form>
 
 				<div class="calc__summary">
@@ -359,7 +361,7 @@
 		</section>
 
 		<footer class="footer">
-			<div class="footer__container container">
+			<div class="footer__container">
 				<div class="footer__info">
 					<a href="/" class="logo footer__logo"> STORE®</a>
 					<span class="text footer__text"
