--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,9 @@
 		</section>
 
 		<section class="section section__info" id="benefits">
+			<h2 class="title section__title">
+				Sell More, Stress Less – Your Store, Your Way!
+			</h2>
 			<div class="info__container">
 				<div class="info__rows info__rows--macbook">
 					<div class="info__text">
@@ -156,7 +159,7 @@
 
 		<section class="section section__pricing" id="prices">
 			<div class="pricing__container">
-				<h2 class="title section__title">Pricing</h2>
+				<h2 class="title section__title">Flexible Plans for Every Need</h2>
 
 				<div class="pricing__boxes">
 					<div class="pricing__box pricing__box--basic">
@@ -365,7 +368,7 @@
 				<div class="footer__info">
 					<a href="/" class="logo footer__logo"> STORE®</a>
 					<span class="text footer__text"
-						>©2019 STORE LTD, All Rights Reserved</span
+						>Since 2019 STORE LTD, All Rights Reserved</span
 					>
 				</div>
 				<div class="footer__box__media">
